force-app/main/default/objects/tc9_pr__Debug_Log__c/tc9_pr__Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Debug Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>