force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Apex_Job_Id__c</fullName>
    <description>Debug Log details for support tracing.</description>
    <inlineHelpText>Debug Log details for support tracing.</inlineHelpText>
    <label>Apex Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>