force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Area__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Area__c</fullName>
    <description>The class which generated this Debug Header.</description>
    <inlineHelpText>The class which generated this Debug Header.</inlineHelpText>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>