force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Debug_Header__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Debug_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Debug Header.</description>
    <inlineHelpText>The related Debug Header.</inlineHelpText>
    <label>Debug Header</label>
    <referenceTo>tc9_pr__Debug_Header__c</referenceTo>
    <relationshipLabel>Debug Logs</relationshipLabel>
    <relationshipName>Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>