force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Description__c</fullName>
    <description>The description of this Debug Log.</description>
    <inlineHelpText>The description of this Debug Log.</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>