force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exception_Stack_Trace__c</fullName>
    <description>Debug Log details for support tracing.</description>
    <inlineHelpText>Debug Log details for support tracing.</inlineHelpText>
    <label>Exception Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>