force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exception_Type__c</fullName>
    <description>Debug Log details for support tracing.</description>
    <inlineHelpText>Debug Log details for support tracing.</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>