force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Line_Number__c</fullName>
    <description>The line of the Apex Class which created this Debug Log.</description>
    <inlineHelpText>The line of the Apex Class which created this Debug Log.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>