force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Record_Detail__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Record_Detail__c</fullName>
    <description>The record which created this Debug Log.</description>
    <inlineHelpText>The record which created this Debug Log.</inlineHelpText>
    <label>Record Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>