force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Record_Type__c</fullName>
    <description>Details of the record which created this Debug Log.</description>
    <inlineHelpText>Details of the record which created this Debug Log.</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>