force-app/main/default/objects/tc9_pr__Debug_Log__c/fields/tc9_pr__Source__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Source__c</fullName>
    <description>The source process which generated this Debug Log.</description>
    <inlineHelpText>The source process which generated this Debug Log.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>