force-app/main/default/objects/tc9_pr__Debug_Log__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>tc9_pr__Debug_Header__c</columns>
    <columns>tc9_pr__Description__c</columns>
    <columns>tc9_pr__Exception_Type__c</columns>
    <columns>tc9_pr__Record_Type__c</columns>
    <columns>tc9_pr__Type__c</columns>
    <columns>tc9_pr__Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>